client/src/components/TotalUsers/TotalUsers.css
.SearchUserInput {
    width: 90%;
    padding: 10px 0;
    border: none;
    border-bottom: 1px solid gray;
    align-items: center;
}

.searchUsers{
    display: flex;
    align-items: center;
    padding: 10px;
}

.refresh {
    width: 30%;
    height: 30%;
    margin: 10px 10px 10px 10px;
}

.userInformation{
    padding: 10px;
    font-weight: 500;
    cursor: pointer;
    margin: 20px 20px 0 0;
}

.userInformation:hover{
    background-color: rgb(245, 243, 243);
}

#currentChat{
    background-color: #ccc;
    font-weight: 700;
    font-size: 21px;
    color: #FFFFFF;
    border:rgb(245, 243, 243);
    box-shadow : 0.5px 0.5px 0.5px rgb(168, 166, 166);
    cursor:default;
}

